add sudo to deploy yml

--- a/.github/workflows/deploygcp.yml
+++ b/.github/workflows/deploygcp.yml
@@ -20,6 +20,7 @@ jobs:
           script: |
             cd /home/kusuma/clean-go
             git pull origin main
+            sudo chmod 777 /var/run/docker.sock
             docker stop beContainer
             docker rm beContainer
             docker rmi be15-images
